--- a/Home.css
+++ b/Home.css
@@ -5,9 +5,14 @@
   box-sizing: border-box;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+.activePage {
+  color: white;
+}
 @media all and (max-width: 767px) {
-  .navHeader,
-  .fullPage {
+  .Header,
+  .navBar,
+  .nav,
+  .welcomeFull {
     display: none;
   }
   /* header */
@@ -33,7 +38,7 @@
     display: none;
     width: 96%;
     position: absolute;
-    top: 69.5px;
+    top: 101%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -86,8 +91,6 @@
     align-items: center;
     margin-bottom: 5px;
   }
-  .testimonials img {
-  }
   footer {
     position: relative;
     display: flex;
@@ -110,10 +113,280 @@
   }
   .interac {
     display: flex;
+    justify-content: flex-start;
+  }
+  .payment {
+    display: flex;
     justify-content: center;
+    align-items: center;
   }
 }
-@media all and (max-width: 1199px) {
+@media all and (min-width: 768px) and (max-width: 1199px) {
+  .Header,
+  .navBar,
+  .nav,
+  .welcomeFull {
+    display: none;
+  }
+  /* header */
+  .mobile {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(29, 74, 134, 0.801);
+    padding: 2%;
+  }
+  .mobile h1 {
+    font-size: 24px;
+    text-align: right;
+    color: rgb(223, 223, 28);
+    text-shadow: 0.01em 0.01em 0.09em black;
+  }
+  .mobile a {
+    text-decoration: none;
+    color: rgb(223, 223, 28);
+  }
+  .dropDown {
+    display: none;
+    width: 96%;
+    position: absolute;
+    top: 101%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transform-origin: top;
+    transform: perspective(1000px) rotateX(-90deg);
+    transition: 0.5s;
+  }
+  .dropDown.active {
+    transform: perspective(1000px) rotateX(0deg);
+    opacity: 1;
+  }
+  .dropDown button {
+    width: 100%;
+    background-color: rgba(29, 74, 134);
+    border: solid 1px black;
+    font-size: 36px;
+    padding: 10px;
+    text-shadow: 0.01em 0.01em 0.09em black;
+  }
+  #mobileNav {
+    background-color: rgb(223, 223, 28);
+    padding: 2%;
+    border: solid 1px black;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+  }
+  /* main content */
+  .welcome,
+  .testimonials {
+    display: flex;
+    background-color: rgba(29, 74, 134, 0.801);
+    flex-direction: column;
+    margin-top: 5px;
+  }
+  h1 {
+    font-size: 250%;
+  }
+  p {
+    font-size: 180%;
+  }
+
+  .welcome h1,
+  .welcome p,
+  .testimonials h1,
+  .testimonials p {
+    color: rgb(223, 223, 28);
+    margin: 10px;
+  }
+  .welcome img {
+    width: 97vw;
+    margin: auto;
+  }
+  .testimonials section {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 5px;
+  }
+  .testimonials img {
+    width: 140px;
+    height: 130px;
+  }
+  footer {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(29, 74, 134, 0.801);
+    margin-top: 5px;
+  }
+  .foot {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .foot img {
+    margin: 2px;
+    width: 170%;
+  }
+  .legacy {
+    display: flex;
+    justify-content: flex-end;
+  }
+  .interac {
+    display: flex;
+    justify-content: flex-start;
+  }
+  .interac img {
+    width: 65px;
+  }
+  .payment {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 @media all and (min-width: 1200px) {
+  .mobileHeader,
+  #mobilImg,
+  .welcome {
+    display: none;
+  }
+  .Header {
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    background-color: rgba(29, 74, 134, 0.801);
+    color: rgb(223, 223, 28);
+    text-shadow: 0.01em 0.01em 0.09em black;
+    text-align: center;
+    height: 172px;
+  }
+  .Header a {
+    color: rgb(223, 223, 28);
+    text-decoration: none;
+  }
+  #sportsCar {
+    position: relative;
+    top: 0px;
+    z-index: -1;
+  }
+  .navBar {
+    position: absolute;
+    top: 172px;
+    left: 25%;
+    width: 50%;
+  }
+  .navBar nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgba(29, 74, 134, 0.801);
+    padding: 5%;
+  }
+  .navBar button {
+    background-color: transparent;
+    border: none;
+    font-size: 150%;
+  }
+  .navBar a {
+    color: rgb(223, 223, 28);
+    text-decoration: none;
+    text-shadow: 0.01em 0.01em 0.09em black;
+  }
+  .welcomeFull {
+    display: flex;
+    background-color: rgba(29, 74, 134, 0.801);
+    margin-top: 5px;
+  }
+  .welcomeFull section {
+    width: 70%;
+  }
+  .welcomeFull img {
+    width: 30%;
+    padding: 1%;
+  }
+  .testimonials {
+    display: flex;
+    flex-direction: row-reverse;
+    background-color: rgba(29, 74, 134, 0.801);
+    margin-top: 5px;
+  }
+  .text {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 70%;
+  }
+  .images {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    width: 30%;
+    margin: auto;
+  }
+  .images img {
+    width: 135px;
+    height: 135px;
+    margin: 5px;
+  }
+  h1 {
+    font-size: 200%;
+    margin-right: 3px;
+  }
+  p {
+    font-size: 180%;
+  }
+  .welcomeFull h1,
+  .testimonials h1 {
+    color: rgb(223, 223, 28);
+    margin: 10px;
+    text-shadow: 0.01em 0.01em 0.09em black;
+  }
+  .welcomeFull p,
+  .testimonials p {
+    color: rgb(223, 223, 28);
+    margin: 10px;
+    font-size: 130%;
+  }
+  footer {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(29, 74, 134, 0.801);
+    margin-top: 5px;
+  }
+  .foot {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .foot img {
+    margin: 2px;
+    width: 178%;
+  }
+  .legacy {
+    display: flex;
+    justify-content: flex-end;
+  }
+  .interac {
+    display: flex;
+    justify-content: flex-start;
+  }
+  .interac img {
+    width: 65px;
+  }
+  .payment {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
