--- a/Home.css
+++ b/Home.css
@@ -74,6 +74,18 @@
     flex-direction: column;
     margin-top: 5px;
   }
+  .text {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    flex-direction: column;
+    margin-bottom: 5px;
+  }
+  .images {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
   .welcome h1,
   .welcome p,
   .testimonials h1,
@@ -84,12 +96,6 @@
   .welcome img {
     width: 95vw;
     margin: auto;
-  }
-  .testimonials section {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-bottom: 5px;
   }
   footer {
     position: relative;
@@ -207,11 +213,17 @@
     width: 97vw;
     margin: auto;
   }
-  .testimonials section {
+  .text {
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: flex-start;
+    flex-direction: column;
     margin-bottom: 5px;
+  }
+  .images {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
   }
   .testimonials img {
     width: 140px;
